fix select overlap on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,7 @@ code {
 
 h1 {
   text-align: center;
+  line-height: 1.8
 }
 
 body{
